--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vite/client"]
+    "types": ["vite/client", "jest", "mocha"]
   }
 }
