--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "cross-fetch": "^4.0.0",
     "graphql": "^16.8.1",
     "jest-environment-jsdom": "^29.7.0",
     "lodash.debounce": "^4.0.8",
@@ -45,6 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "mock-apollo-client": "^1.2.1",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
